make test more readable